2006-05-27  Kees Cook  <kees@outflux.net>

	* src/extension/implementation/script.cpp: allow output extension
	  parameters to be prompted and used, closes bug #1495310.

2006-05-26  MenTaLguY  <mental@rydia.net>

	* src/dialogs/layers-panel.h, src/dialogs/layers-panel.cpp:

	  make button labels translatable, and use HButtonBox instead of HBox for
	  better appearance

2006-05-26  Jon A. Cruz  <jon@joncruz.org>

	* src/layer-manager.cpp, src/layer-manager.h,
	  src/dialogs/layer-properties.cpp, src/dialogs/layers-panel.cpp:

	  Prevent layer name duplication.
	  Fixes bug #1115407.

2006-05-26  Jon A. Cruz  <jon@joncruz.org>

	* src/widgets/desktop-widget.cpp:

	  Fixed resize handle in corner of main UI.
	  Fixes bug #1493995.

2006-05-26  Jon A. Cruz  <jon@joncruz.org>

	* src/layer-manager.cpp, src/layer-manager.h,
	  src/widgets/layer-selector.cpp:

	  Cleaned up propagation of status changes.
	  Fixes bug #1495333.

2006-05-26  Michael Wybrow  <mjwybrow@users.sourceforge.net>

	* src/path-prefix.h: Add missing CREATE_* directory locations
	  for building an OS X application bundle.  Fixes bug #1495284.

2006-05-25  Bryce Harrington <bryce@bryceharrington.org>

	* src/inkscape.cpp:  i18n on error messages (fix for bug 1490928) 

2006-05-23  Jon A. Cruz  <jon@joncruz.org>

	* src/dialogs/layers-panel.cpp, src/dialogs/swatches.cpp,
	  src/dialogs/swatches.h, src/preferences-skeleton.h,
	  src/ui/previewfillable.h, src/ui/previewholder.cpp,
	  src/ui/previewholder.h, src/ui/widget/panel.cpp,
	  src/ui/widget/panel.h, src/verbs.cpp,
	  src/widgets/desktop-widget.cpp:
	  Refactored panels.
	  Fixes RFE #1453153. Fixes RFE #1453152.
	

2006-05-23  MenTaLguY  <mental@rydia.net>

	* src/extension/internal/ps.cpp:

	  move %%EOF to end of output document

2006-05-22  Jon A. Cruz  <jon@joncruz.org>

	* src/dialogs/swatches.cpp, src/ui/widget/panel.cpp,
	  src/ui/widget/panel.h:
	  Removed panel menu unless requested. Fixes bug #1492597.
